febe/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-c6d827ec-9923-4346-9bad-90f2460de007
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  selector:
    app: springboot-app-c6d827ec-9923-4346-9bad-90f2460de007
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
