febe/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-c6d827ec-9923-4346-9bad-90f2460de007
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  labels:
    app: springboot-app-c6d827ec-9923-4346-9bad-90f2460de007
spec:
  ingressClassName: nginx
  rules:
    - host: app-os69wq.qpy2m3.us-east-2.febe.k8s
      http:
        paths:
          - backend:
              service:
                name: springboot-service-c6d827ec-9923-4346-9bad-90f2460de007
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-c6d827ec-9923-4346-9bad-90f2460de007
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
